// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Snapshot Renders the UI snapshot correctly 1`] = `
<button
  className="chakra-button css-1xdhyk6"
  id="button"
  onClick={[MockFunction]}
  type="button"
>
  Primary
</button>
`;

exports[`Button Snapshot Renders the UI snapshot correctly 2`] = `
<button
  className="chakra-button css-1xdhyk6"
  disabled={true}
  id="button"
  onClick={[MockFunction]}
  type="button"
>
  Disabled
</button>
`;

exports[`Button Snapshot Renders the UI snapshot correctly 3`] = `
<button
  className="chakra-button css-1xdhyk6"
  id="button"
  onClick={[MockFunction]}
  type="button"
>
  Seconday
</button>
`;

exports[`Button Snapshot Renders the UI snapshot correctly 4`] = `
<button
  className="chakra-button css-1xdhyk6"
  id="button"
  onClick={[MockFunction]}
  type="button"
>
  Callout
</button>
`;

exports[`Button Snapshot Renders the UI snapshot correctly 5`] = `
<button
  className="chakra-button css-1xdhyk6"
  id="button"
  onClick={[MockFunction]}
  type="button"
>
  Pill
</button>
`;

exports[`Button Snapshot Renders the UI snapshot correctly 6`] = `
<button
  className="chakra-button css-1xdhyk6"
  id="button"
  onClick={[MockFunction]}
  type="button"
>
  Text
</button>
`;

exports[`Button Snapshot Renders the UI snapshot correctly 7`] = `
<button
  className="chakra-button css-1xdhyk6"
  id="button"
  onClick={[MockFunction]}
  type="button"
>
  NoBrand
</button>
`;

exports[`Button Snapshot Renders the UI snapshot correctly 8`] = `
<button
  className="chakra-button css-1t0bvx9"
  id="button"
  onClick={[MockFunction]}
  type="button"
/>
`;

exports[`Button Snapshot Renders the UI snapshot correctly 9`] = `
<button
  className="chakra-button css-1xdhyk6"
  data-testid="testid"
  id="button"
  onClick={[MockFunction]}
  type="button"
/>
`;
